fix form padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -499,8 +499,6 @@ label {
   align-items: center;
 }
 
-
-
 @media (max-width: 1024px) {
   .pancakes {
     grid-template-columns: 1fr 1fr;
@@ -529,6 +527,10 @@ label {
 @media (max-width: 768px) {
   .pancakes {
     grid-template-columns: 1fr;
+  }
+
+  #formWrapper {
+    padding: 2rem 0;
   }
 
   #pancakeForm {
